Add Chapter 3 Probability Problem
Annoying integration by parts.

--- a/python_math/Probability Problems.ipynb
+++ b/python_math/Probability Problems.ipynb
@@ -68,6 +68,52 @@
     "The probability of her dialing no more than 3 wrong numbers equals 1 minus the probability that she dials the correct number \n",
     "in her first 3 tries. There are 10! ways for the secretary to dial the numbers, and 3 * 9! ways for the numbers to be arranged in a way such that she calls the correct number in the first 3 tries. Therefor, the probability that the dials no more than 3 wrong numbers is 1 - (3 * 9! / 10!) = 1 - (3/10) which equals 70%."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Problem 3.5: A random variable $\\xi$ has the following distribution for k > 0\n",
+    "$$p_\\xi(x) = \\begin{cases}\n",
+    "        ax^2e^{-kx} \\text{ when }x \\in [0,\\infty)\n",
+    "        \\\\\n",
+    "        0 \\text{ otherwise}\n",
+    "        \\end{cases}$$\n",
+    "a) find the constant a\n",
+    "b) find the distribution function of $\\xi$\n",
+    "c) find the $P\\{0 \\leq \\xi < 1/k\\}$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "a) $\\int_{0}^{\\infty} ax^2e^{-kx}dx = 1$\n",
+    "We need to use integration by parts to solve this integral\n",
+    "$$\\int ax^2e^{-kx}dx = \\frac{-ax^2e^{-kx}}{k} - \\int \\frac{-2axe^{-kx}}{k} = \\frac{-ax^2e^{-kx}}{k} - \\frac{2axe^{-kx}}{k^2} - \\frac{2ae^{-kx}}{k^3} $$\n",
+    "so\n",
+    "$$ 0 - (-a/k - 2a/k^2 - 2a/k^3) = 1 $$\n",
+    "$$ a(k^2 + 2k + 2) = k^3 $$\n",
+    "$$ a = k^3/(k^2 + 2k + 2) $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "b) The probability distribution function is the probability that $\\xi$ is less than x\n",
+    "$$P\\{\\xi \\leq x\\} = \\int_{0}^{x} ax^2e^{-kx}dx $$ \n",
+    "$$ = a e^{-k x} (\\frac{-2}{k^3} - \\frac{2 x}{k^2} - \\frac{x^2}{k}) \\text{ evaluated from x to 0} $$\n",
+    "$$ = a e^{-k x} (\\frac{-2}{k^3} - \\frac{2 x}{k^2} - \\frac{x^2}{k}) + \\frac{2a}{k^3} $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "c)$$P\\{\\xi \\leq \\frac{1}{k}\\} =  a e^{-k \\frac{1}{k}} (\\frac{-2}{k^3} - \\frac{2 \\frac{1}{k}}{k^2} - \\frac{\\frac{1}{k}^2}{k}) + \\frac{2a}{k^3}  $$\n",
+    "$$ =  a\\frac{2 - 5e}{k^3}$$"
+   ]
   }
  ],
  "metadata": {
